SigmaCodebackup3rdSep/objects/Work_Oder_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Order Lines</relationshipLabel>
        <relationshipName>Work_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To be Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <label>Used ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>IF( Warranty__c , 0, ((Price__c  *  Quantity__c ) - ((Price__c  *  Quantity__c ) *  Discount__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item_Number__c</fullName>
        <displayFormat>WRL-{YYYY}-{MM}-{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Work Order Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Work Order Lines</relationshipLabel>
        <relationshipName>Work_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Lines</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WRL-{YYYY}-{MM}-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Either_Quote_or_Used_must_be_checked</fullName>
        <active>true</active>
        <description>Either &quot;To be Quoted&quot; or &quot;Used&quot; has to be checked</description>
        <errorConditionFormula>IF( Used1__c  &amp;&amp;  Quote__c , true, false)</errorConditionFormula>
        <errorMessage>Either &quot;To be Quoted&quot; or &quot;Used&quot; has to be checked</errorMessage>
    </validationRules>
</CustomObject>